# alphaearth-hack

./: .env.local.example  .gitignore  .gitmodules  README.md  concept.md  earthengine_python_api_overview.md  package-lock.json  package.json
app/: layout.js  page.js
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/services/: analyze.py  ee_alphaearth.py  ee_alphaearth_learn.py  ee_climate.py
components/: EEMap.js
frontend/: .env.local.example  README.md  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.js
frontend/app/api/analyze/: route.js
frontend/app/api/analyze/latex/: route.js
frontend/app/api/ee/alphaearth/learn/tiles/: route.js
frontend/app/api/ee/alphaearth/tiles/: route.js
frontend/app/api/ee/climate/tiles/: route.js
frontend/app/api/proxy-ee/: route.js
frontend/app/api/proxy-gapi/: route.js
frontend/app/api/tiles/[year]/[z]/[x]/[y]/: route.js
frontend/components/: EEMap.js
notebooks/: 02_UNET_segmentation.ipynb  pyproject.toml
notebooks/outputs/unet/: bboxes.json
