[project]
name = "policy-proof-backend"
version = "0.1.0"
description = "FastAPI backend for Policy Proof: SRD analysis and chat websocket"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Policy Proof Team" }
]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "shapely>=2.0",
  "aiohttp>=3.9",
  "python-dotenv>=1.0",
  "openai>=1.44",
  "sentence-transformers>=2.7",
  "instructor>=1.3",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

[tool.uv]
# uv will use this pyproject for dependency resolution

[tool.ruff]
line-length = 100
target-version = "py310"
